# ExOS

./: .gitignore  PID_v1.py  PID_v2.py  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  app.py  differint_test.py
.ipynb_checkpoints/: PID_v2-checkpoint.py
Pyonics/: LICENSE.txt  control.py  interface.py  main.py  physics.py  pyonics.py  pyonics2.py  simulation.py
batch test input files/: PID_test1.txt  PID_tkinter_test2.txt
config/: config.py
control_flow/: control.py
exoskeleton/: 4157world_1.xml  README.md  X001_onefile  config.txt  demo_config.txt  embedded_testconfig1.txt  exos.py  main.py  physics_test.py  shoulder_3OOP.py  test_config2.txt  test_config3.txt  xo_simtest.py  xos.py  xosim_world_v1.xml
exoskeleton/pyonics/: LICENSE.txt  README.txt  main.py  meta.yaml  pyproject.toml  setup.py
exoskeleton/pyonics/submodules/apps/: apps.py
exoskeleton/pyonics/submodules/audio/: recording.py
exoskeleton/pyonics/submodules/control/: control.py
exoskeleton/pyonics/submodules/modeling/: modeling.py
exoskeleton/pyonics/submodules/network/: osc_toolkit.py
exoskeleton/pyonics/submodules/physics/: physics.py
exoskeleton/pyonics/submodules/ui/: interface.py  model.conf  system_strings.py  zira_us.reg
exoskeleton/pyonics/submodules/video/: video.py
exoskeleton/pyonics/tests/: PID_test1.txt  differint_test.py  klampt_test.py
gui/: ipython_view.py  tkinter_view.py
pids/: pid.py
pyonics/: differint_test.py  main.py
scripts/: README.txt  neural_net.py  pose_script.bat  quick_bionic_sim.py  research.py
(+91 files in other folders)
