[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyonics"
version = "0.0.1"
authors = [
  { name="Tayo Castro", email="operations@thehuntress.is" },
]
description = "Tools for bionics research"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pyromakesmusic/Math4157/tree/master/pyonics"
"Bug Tracker" = "https://github.com/pyromakesmusic/Math4157/issues"